@@ -1,3 +1,9 @@
+2024-12-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* uniblock.c: Update references Unicode blocks Blocks-16.0.0.txt.
+	* version.h, configure.ac: Bump version to 20241229.
+	* COPYRIGHT: Update copyright year.
+
 2023-09-18  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* version.h, configure.ac: Bump version to 20230917.
